fix: Slider last item clipping against screen edge on mobile (#42)
Add padding-right to match the existing padding-left so the last slide
has the same breathing room as the first, keeping it flush with the
section container.

--- a/web/assets/scss/components/_swiper.scss
+++ b/web/assets/scss/components/_swiper.scss
@@ -8,6 +8,7 @@
 		margin-left: calc(-1 * var(--section-padding-x));
 		margin-right: calc(-1 * var(--section-padding-x));
 		padding-left: var(--section-padding-x);
+		padding-right: var(--section-padding-x);
 
 		.swiper-wrapper {
 			display: flex;
